# ds-u2-actividad-1-listasenlazadassimples-cesar-upv

./: CMakeLists.txt  Doxyfile  README.md  doxygen.txt
arduino/: SerialEmitter.ino
docs/html/: AuxiliarCli_8h.html  AuxiliarCli_8h.js  AuxiliarCli_8h__dep__incl.map  AuxiliarCli_8h__dep__incl.md5  AuxiliarCli_8h__incl.map  AuxiliarCli_8h__incl.md5  AuxiliarCli_8h_source.html  ListaGeneral_8h.html  ListaGeneral_8h.js  ListaGeneral_8h__dep__incl.map  ListaGeneral_8h__dep__incl.md5  ListaGeneral_8h__incl.map  ListaGeneral_8h__incl.md5  ListaGeneral_8h_source.html  ListaSensor_8h.html  ListaSensor_8h__dep__incl.map  ListaSensor_8h__dep__incl.md5  ListaSensor_8h__incl.map  ListaSensor_8h__incl.md5  ListaSensor_8h_source.html  Nodo_8h.html  Nodo_8h__dep__incl.map  Nodo_8h__dep__incl.md5  Nodo_8h_source.html  SensorBase_8h.html  SensorBase_8h__dep__incl.map  SensorBase_8h__dep__incl.md5  SensorBase_8h__incl.map  SensorBase_8h__incl.md5  SensorBase_8h_source.html  SensorPresion_8h.html  SensorPresion_8h__dep__incl.map  SensorPresion_8h__dep__incl.md5  SensorPresion_8h__incl.map  SensorPresion_8h__incl.md5  SensorPresion_8h_source.html  SensorTemperatura_8h.html  SensorTemperatura_8h__dep__incl.map  SensorTemperatura_8h__dep__incl.md5  SensorTemperatura_8h__incl.map  (+67 more)
doxygen-docs/html/: dir_b2f33c71d4aa5e7af42a1ca61ff5af1b.html  md_README.html  navtreedata.js  navtreeindex0.js  pages.html
include/: AuxiliarCli.h  ListaGeneral.h  ListaSensor.h  Nodo.h  SensorBase.h  SensorPresion.h  SensorTemperatura.h
reporte-latex/: main.tex
src/: main.cpp  main.dox
(+45 files in other folders)
